[JBWS-3824] Misc fixes/improvements: * Fix indentation * Remove unused methods * Properly concatenate strings using StringBuilder * Create temp file in dedicated output directory