@@ -28,13 +28,14 @@ import java.net.URL;
 import java.util.BitSet;
 
 /**
- * Utility for dealing with URLs in pre-JDK 1.4.
+ * Utility for dealing with URLs
  *
- * User: rsearls
- * Date: 2/6/15
+ * @author rsearls
+ * @since 06-Feb-2015
  */
-public class UrlUtils {
-   private static final BitSet UNRESERVED = new BitSet( Byte.MAX_VALUE - Byte.MIN_VALUE + 1 );
+public class UrlUtils
+{
+   private static final BitSet UNRESERVED = new BitSet(Byte.MAX_VALUE - Byte.MIN_VALUE + 1);
 
    private static final int RADIX = 16;
 
@@ -50,50 +51,46 @@ public class UrlUtils {
    {
       try
       {
-         byte[] bytes =
-            "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_.!~*'():/".getBytes( ENCODING );
-         for ( byte aByte : bytes )
+         byte[] bytes = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_.!~*'():/".getBytes(ENCODING);
+         for (byte aByte : bytes)
          {
-            UNRESERVED.set( aByte );
+            UNRESERVED.set(aByte);
          }
       }
-      catch ( UnsupportedEncodingException e )
+      catch (UnsupportedEncodingException e)
       {
          // can't happen as UTF-8 must be present
       }
    }
 
-   public static URL getURL( File file )
-      throws MalformedURLException
+   public static URL getURL(File file) throws MalformedURLException
    {
-      // with JDK 1.4+, code would be: return new URL( file.toURI().toASCIIString() );
-      //noinspection deprecation
-      URL url = file.toURL();
+      URL url = new URL(file.toURI().toASCIIString());
       // encode any characters that do not comply with RFC 2396
       // this is primarily to handle Windows where the user's home directory contains spaces
       try
       {
-         byte[] bytes = url.toString().getBytes( ENCODING );
-         StringBuilder buf = new StringBuilder( bytes.length );
-         for ( byte b : bytes )
+         byte[] bytes = url.toString().getBytes(ENCODING);
+         StringBuilder buf = new StringBuilder(bytes.length);
+         for (byte b : bytes)
          {
-            if ( b > 0 && UNRESERVED.get( b ) )
+            if (b > 0 && UNRESERVED.get(b))
             {
-               buf.append( (char) b );
+               buf.append((char) b);
             }
             else
             {
-               buf.append( '%' );
-               buf.append( Character.forDigit( b >>> 4 & MASK, RADIX ) );
-               buf.append( Character.forDigit( b & MASK, RADIX ) );
+               buf.append('%');
+               buf.append(Character.forDigit(b >>> 4 & MASK, RADIX));
+               buf.append(Character.forDigit(b & MASK, RADIX));
             }
          }
-         return new URL( buf.toString() );
+         return new URL(buf.toString());
       }
-      catch ( UnsupportedEncodingException e )
+      catch (UnsupportedEncodingException e)
       {
          // should not happen as UTF-8 must be present
-         throw new RuntimeException( e );
+         throw new RuntimeException(e);
       }
    }
 }
